inserção-icones-botoes

--- a/src/app/pessoa/listar-pessoa/listar-pessoa.component.html
+++ b/src/app/pessoa/listar-pessoa/listar-pessoa.component.html
@@ -47,12 +47,12 @@
                         <td>
                         <a title="Remover" alt="Remover"  (click)="remover($event, pessoa)">
                             <button class="button-remover">
-                                Excluir
+                                 <img src="../../../assets/trash.svg" alt="trash" class="trash">
                             </button>
                         </a>
                         <a [routerLink] = "['/pessoas/editar', pessoa.id]">
                             <button class="button-update">
-                                Atualizar
+                                <img src="../../../assets/update.svg" alt="update" class="update">
                             </button>
                         </a>
                            
