--- a/src/app/pessoa/listar-pessoa/listar-pessoa.component.css
+++ b/src/app/pessoa/listar-pessoa/listar-pessoa.component.css
@@ -44,7 +44,7 @@ h1{
     padding-right: 90vh;
 }
 h2{
-    font-size:24px;
+    font-size:28px;
     color:#377DC0;
     font-weight: 700;
 }
@@ -58,7 +58,7 @@ h2{
     font-size: 24px;
 }
 .input-name{
-    width: 100vh;
+    width: 85vh;
     height: 65px;
     background-color: #D9D9D9;
     border: none;
@@ -67,18 +67,18 @@ h2{
     font-size:22px;
 }
 .button-cadastrar{
-    width: 320px;
-    height: 60px;
+    width: 270px;
+    height: 50px;
     color: white;
-    font-size: 22px;
-    background-color:#377DC0 ;
+    font-size: 20px;
+    background-color: #377DC0;
     border-radius: 12px;
     cursor: pointer;
     margin-top: 20px;
 }
 .button-remover{
     width: 100px;
-    height: 35px;
+    height: 40px;
     border-radius: 8px;
     background-color: red;
     color: white;
@@ -88,11 +88,23 @@ h2{
     margin-top: 5px;
     cursor: pointer;
 }
+.trash{
+    height: 30px;
+    padding-top: 2px;
+}
+.user{
+    height: 30px;
+    padding-top: 2px;
+}
+.update{
+    height: 30px;
+    padding-top: 2px;
+}
 .button-update{
     width: 100px;
-    height: 35px;
+    height: 40px;
     border-radius: 8px;
-    background-color: green;
+    background-color: yellow;
     color: white;
     font-size: 16px;
     border: 1px solid black;
